--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="number-display">
-    {{ counter }}
+    {{ phrase }}
   </div>
-  <button (click)="increment()">increment</button>
+  <button (click)="update()">increment</button>
 </div>
